# mini-pandas-ai-txt2sql

./: .env.example  .gitignore  AUTO_INSIGHTS.md  CLAUDE.md  PLOTTING_FEATURES.md  README.md  RELEASE_NOTES.md  app.py  example_plot_queries.md  pyproject.toml  requirements.txt
src/: __init__.py  auto_insights.py  chat_agent.py  config.py  data_loader.py  deep_insights.py  llm_client.py
src/ui/: __init__.py  chat.py  sidebar.py
src/utils/: __init__.py  font_config.py  session.py
tests/: __init__.py  conftest.py  test_auto_insights.py  test_chat_agent.py  test_config.py  test_data_loader.py  test_font_config.py  test_llm_client.py  test_session.py  test_ui.py
